2011-01-25  Michael Miousse  <michael.miousse@infoglobe.ca>
	* Added Feature #12447 Clearly separate Checks from Report in module	

2011-01-21  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Merged changes from mantis-#17176: Remove unnecessary comments and color profiles from all shipped .png / .gif files (Thanks to Steffen Gebert)

2011-01-20  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #12432: Selected page metas are not processed
	* Fixed bug #12431: Do not put labels into members
	* Fixed bug #12429: Do not use private accessors
	* Fixed bug #12428: Adapt Variable Names to naming conventions
	* Fixed bug #12427: Rename draw*() methods to render*()
	* Fixed bug #12426: Rename classes according to naming conventions
	* Fixed bug #12425: Give modfunc1 a better name
	* Fixed bug #12424: Only use the class name for the hook
	* Fixed bug #12416: tx_linkvalidator_tasks_Validate: Missing public / protected declarations
	* Fixed bug #12226: website that has multiple domainsrecords produces funny links
	* Fixed bug #12414: OOP principle of data encapsulation violated in tx_linkvalidator_tasks_Validate
	* Fixed bug #12385: Conflict scheduler:testtask with linkvalidator::task
	* Fixed bug #12411: Fix Copyright Notices

2011-01-20  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12360: Show error message, if the module is not accessible for the current user
	* Fixed bug #12412: XSS issue in tx_linkvalidator_tasks_ValidateAdditionalFieldProvider
	* Fixed bug #12419: Use American English for "analyseRecord"
	* Fixed bug #12420: Indentation in modfunc1, getTemplateMarkers()
	* Fixed bug #12421: Rename tx_linkvalidator_links to tx_linkvalidator_link
	* Fixed bug #12423: ext_tables.sql: Use underscores to separate words in field names
	* Fixed bug #12422: ext_tables.sql: Do not use abbreviations for field names

2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca>
